--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,8 +27,9 @@ jobs:
 
       # Runs a single command using the runners shell
       - name: Run a one-line script
-        run: echo Hello, world,
-             julia --color=yes build_tarballs.jl
+        run: 
+          echo Hello, world,
+          julia --color=yes build_tarballs.jl
         
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
