--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,12 +27,12 @@ jobs:
 
       # Runs a single command using the runners shell
       - name: Run a one-line script
-        run: 
+        run: |
           echo Hello, world,
           julia --color=yes build_tarballs.jl
         
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
-        run: 
+        run: |
           echo Add other actions to build,
           echo test, and deploy your project.
