--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,13 +26,12 @@ jobs:
       - uses: actions/checkout@v2
 
       # Runs a single command using the runners shell
-      - name: Run a one-line script
+      - name: Get latest OpenBLAS code
         run: |
-          echo Hello, world,
-          julia --color=yes build_tarballs.jl
+         git clone https://github.com/xianyi/OpenBLAS.git
+         cd OpenBLAS
         
       # Runs a set of commands using the runners shell
-      - name: Run a multi-line script
+      - name: Build OpenBLAS
         run: |
-          echo Add other actions to build,
-          echo test, and deploy your project.
+          ./configure
