--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,4 +34,5 @@ jobs:
       # Runs a set of commands using the runners shell
       - name: Build OpenBLAS
         run: |
-          x86_64-w64-mingw32-gcc -v
+          make -j6
+          # x86_64-w64-mingw32-gcc -v
